<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"

    >

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_button_black"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_memu"
            android:icon="@drawable/menu"
            android:title="@string/nav_memu" />
        <item
            android:id="@+id/nav_offcer"
            android:icon="@drawable/tag_black"
            android:title="@string/nav_offcer" />
        <item
            android:id="@+id/nav_cart_shooping"
            android:icon="@drawable/shopping_cart_black"
            android:title="@string/nav_cart_shooping" />
    </group>



</menu>
